--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
          <div class="form-group">
              <input id="lunch-menu" type="text"
              placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control" ng-model="dishes">
+             class="form-control" ng-model="dishes" ng-style="Obj2">
          </div>
          <div class="form-group">
              <button class="btn btn-default" ng-click="checkLunch()">Check If Too Much</button>
          </div>
 
-         <div class="form-group message">
+         <div class="form-group message" ng-style="Obj">
            <!-- Your message can go here. -->
            {{message}}
          </div>
