--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
              class="form-control" ng-model="dishes" ng-style="Obj2">
          </div>
          <div class="form-group">
-             <button class="btn btn-default" ng-click="checkLunch()">Check If Too Much</button>
+             <button class="btn btn-primary" ng-click="checkLunch()">Check If Too Much</button>
          </div>
 
          <div class="form-group message" ng-style="Obj">
